# rust-game-engine

./: Cargo.toml  engine.code-workspace
capy/: Cargo.toml
capy/shaders/: light.wgsl
capy/src/: app.rs  capy_window.rs  command.rs  ecs.rs  event.rs  lib.rs  old_lib.rs  resources.rs  scene.rs
capy/src/command/: input_command.rs
capy/src/ecs/: archetype  system.rs
capy/src/event/: app_event.rs  key_event.rs
demos/tutorial_demo/: Cargo.toml
engine/: Cargo.toml  LICENSE
engine/res/: T-Pose.fbx
engine/src/: camera.rs  entity.rs  game.rs  instance.rs  lib.rs  main.rs  model.rs  pipeline.rs  resources.rs  scene.rs  state.rs  texture.rs  texture_manager.rs
math/: Cargo.toml
math/src/: lib.rs  mat3.rs  mat4.rs  quat.rs  util.rs  vector2.rs  vector3.rs  vector4.rs
poblano_engine/: Cargo.toml
poblano_engine/shaders/: shader.wgsl
poblano_engine/src/: camera.rs  camera3d.rs  hdr.rs  input.rs  lib.rs  model.rs  resources.rs  shader.wgsl  texture.rs
poblano_engine/src/component/: component_3d.rs
poblano_engine/src/component_manager/: component_manager_2d.rs
poblano_engine/src/ecs/: entity.rs
poblano_engine/src/ecs/component/: material_component.rs  mesh_component.rs  mod.rs  model_component.rs  texture_component.rs  transform2d_component.rs
poblano_engine/src/scene/: scene.rs  scene2d.rs  scene3d.rs
poblano_math/: Cargo.toml
poblano_math/src/: Mat4.rs  Quat.rs  Vec2.rs  Vec3.rs  Vec4.rs  lib.rs
sandbox/: Cargo.toml
sandbox/src/: main.rs
shaders/: hdr.wgsl
src/: camera.rs  camera_controller.rs  camera_uniform.rs  lib.rs  main.rs  shader.wgsl  state.rs  texture.rs  vertex.rs
(+24 files in other folders)
