[package]
name = "poblano"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "*"
winit = "*"
wgpu = "*"
env_logger = "*"
log = "*"
pollster = "*"
bytemuck = { version = "*", features = [ "derive" ] }
anyhow = "*"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "*"
console_log = "*"
wgpu = { version = "*", features = ["webgl"]}
wasm-bindgen = "*"
wasm-bindgen-futures = "*"
web-sys = { version = "*", features = [
    "Document",
    "Window",
    "Element",
]}

[dependencies.image]
version = "*"
default-features = false
features = ["png", "jpeg"]
